Java 17 deprecations